--- a/config
+++ b/config
@@ -89,6 +89,7 @@ htpasswd_encryption = bcrypt
 # Rights backend
 # Value: none | authenticated | owner_only | owner_write | from_file
 #type = owner_only
+type = from_file
 
 # File for rights management from_file
 #file = /etc/radicale/rights
